# thesislogic

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  NOTICE  README.md  SECURITY.md  pyproject.toml
deploy/systemd/: thesislogic.service
docs/: adoption-guide.md  architecture.md  deployment.md  responsible-ai.md  validation-prompts.md
packs/missouri/: pack.json  practice_areas.json
tests/: test_core.py
thesislogic/: __init__.py  audit.py  auth.py  cli.py  config.py  db.py  ingestion.py  packs.py  proofgate.py  retrieval.py  server.py  workflows.py
thesislogic/providers/: __init__.py  anthropic_provider.py  base.py  deterministic.py  gemini_provider.py  openai_compat.py
thesislogic/ui/: workspace.html
